ICE-7650: showcase app - ace:pushButton IE8 rendering issue.

--- a/icefaces3/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/css/showcase_styles.css
+++ b/icefaces3/trunk/icefaces/samples/showcase/showcase/src/main/webapp/resources/css/showcase_styles.css
@@ -191,6 +191,10 @@ div.ui-widget.ui-widget-content.wijmo-wijmenu.ui-corner-all.ui-helper-clearfix.w
     border: 0px;
 }
 
+.ice-pushbutton .yui-button button {
+    border: 1px solid transparent;
+}
+
 .newBid {
     background-color: yellow;
 }
